syntax = "proto3";

package proto;

option go_package = "github.com/KartoonYoko/gophkeeper/internal/proto";

// StoreService сервис для хранения приватных данных
service StoreService {
    rpc SaveData (SaveDataRequest) returns (SaveDataResponse);
    rpc GetDataByID (GetDataByIDRequest) returns (GetDataByIDResponse);
}

message SaveDataRequest {
    DataTypeEnum type = 1;
    string description = 2;
    bytes data = 3;
}

message SaveDataResponse {
    int32 data_id = 1;
}

enum DataTypeEnum {
    DATA_TYPE_CREDENTIALS = 0;
    DATA_TYPE_TEXT = 1;
    DATA_TYPE_BINARY = 2;
    DATA_TYPE_BANK_CARD = 3;
}

message GetDataByIDRequest {
    int32 id = 1;
}

message GetDataByIDResponse {
    DataTypeEnum type = 1;
    string description = 2;
    bytes data = 3;
}
